--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 requests
 aiohttp
-git+https://github.com/Itz-fork/fake-useragent.git
+fake-useragent @ git+https://github.com/Itz-fork/fake-useragent.git
